--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           },
           extend: {
             colors: {
-              black: "#00000",
+              black: "#1c1d21",
               white: "#ffffff",
               Fuchsia: "#d946ef",
               Indigo: "#4f46e5",
@@ -44,13 +44,13 @@
   <body class="bg-white text-black overflow-x-hidden">
     <!-- Header Section -->
     <header
-      class="h-20 border-b border-cream flex items-center fixed z-[100] top-0 left-0 right-0 w-full bg-black/80 backdrop-blur-xl"
+      class="h-20 border-b border-black flex items-center fixed z-[100] top-0 left-0 right-0 w-full bg-black/80 backdrop-blur-xl"
     >
       <!-- Navbar -->
       <nav class="container flex justify-between items-center gap-5">
         <!-- Logo -->
-        <a href="#" class="text-xl lowercase font-semibold text-violet"
-          >Ethereal<span class="text-white">.</span></a
+        <a href="#" class="text-xl lowercase font-semibold text-white"
+          >Ethereal<span class="text-Fuchsia">.</span></a
         >
 
         <!-- Nav links -->
@@ -58,35 +58,35 @@
           <li>
             <a
               href="#"
-              class="text-cream hover:text-gainsboro transition duration-300 ease-in-out"
+              class="text-Fuchsia hover:text-white transition duration-300 ease-in-out"
               >Home</a
             >
           </li>
           <li>
             <a
               href="#services"
-              class="text-cream hover:text-gainsboro transition duration-300 ease-in-out"
+              class="text-Fuchsia hover:text-white transition duration-300 ease-in-out"
               >Services</a
             >
           </li>
           <li>
             <a
               href="#pricing"
-              class="text-cream hover:text-gainsboro transition duration-300 ease-in-out"
+              class="text-Fuchsia hover:text-white transition duration-300 ease-in-out"
               >Pricing</a
             >
           </li>
           <li>
             <a
               href="#shop"
-              class="text-cream hover:text-gainsboro transition duration-300 ease-in-out"
+              class="text-Fuchsia hover:text-white transition duration-300 ease-in-out"
               >Shop</a
             >
           </li>
           <li>
             <a
               href="#appointment"
-              class="bg-violet text-white px-5 py-3 rounded-full font-medium hover:bg-cream transition duration-300 ease-in-out"
+              class="bg-Indigo text-white px-5 py-3 rounded-full font-medium hover:bg-Fuchsia transition duration-300 ease-in-out"
               >Appointment</a
             >
           </li>
@@ -101,7 +101,7 @@
         class="h-[calc(100vh-5rem)] bg-no-repeat bg-center bg-cover relative"
         style="background-image: url(./assets/images/hero.jpg)"
       >
-        <!-- Overlays -->
+        <!-- Overlays gradient -->
         <div
           class="absolute top-0 left-0 right-0 bottom-0 w-full h-full bg-gradient-to-t from-black/75 to-transparent z-[1]"
         ></div>
@@ -115,7 +115,7 @@
           >
             Unveiling Radiance in Our Exclusive 'For Her' Oasis
           </h1>
-          <p class="text-gray max-w-6xl">
+          <p class="text-Lime max-w-6xl">
             Step into a world crafted exclusively her at Ethereal Beauty Parlor
             and Spa. Indulge in a symphony of tailored treatments, from
             rejuvenating facials to precision hair styling, all delivered with a
@@ -123,17 +123,18 @@
           </p>
           <a
             href="#appointment"
-            class="bg-mediumSlateBlue text-white px-5 py-3 rounded-full font-medium hover:bg-cream transition duration-300 ease-in-out"
+            class="bg-Indigo text-white px-5 py-3 rounded-full font-medium hover:bg-Fuchsia transition duration-300 ease-in-out"
             >Make an Appointment</a
           >
 
           <!-- Scroll Button-->
           <a
             href="#services"
-            class="absolute left-1/2 -translate-x-1/2 bottom-10 flex flex-col gap-2.5 items-center text-gray"
+            class="absolute left-1/2 -translate-x-1/2 bottom-10 flex flex-col gap-2.5 items-center text-Lime"
           >
             <span>Scroll Down</span>
             <span class="animate-bounce">
+              <!-- lucid Icon -->
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
@@ -155,7 +156,7 @@
       </section>
 
       <!-- Services -->
-      <section id="services" class="pt-20 bg-cream">
+      <section id="services" class="pt-20 bg-Fuchsia">
         <!-- Section title -->
         <div
           class="container text-center flex flex-col items-center gap-1.5 mb-10"
@@ -187,7 +188,7 @@
               <p>Lorem ipsum dolor sit amet.</p>
               <a
                 href="#appointment"
-                class="inline-block w-10 h-10 bg-white rounded-full flex justify-center items-center hover:bg-violet transition duration-300 ease-in-out"
+                class="inline-block w-10 h-10 bg-white rounded-full flex justify-center items-center hover:bg-Indigo transition duration-300 ease-in-out"
                 ><span>
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -225,7 +226,7 @@
               <p>Lorem ipsum dolor sit amet.</p>
               <a
                 href="#appointment"
-                class="inline-block w-10 h-10 bg-white rounded-full flex justify-center items-center hover:bg-violet transition duration-300 ease-in-out"
+                class="inline-block w-10 h-10 bg-white rounded-full flex justify-center items-center hover:bg-Indigo transition duration-300 ease-in-out"
                 ><span>
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -263,7 +264,7 @@
               <p>Lorem ipsum dolor sit amet.</p>
               <a
                 href="#appointment"
-                class="inline-block w-10 h-10 bg-white rounded-full flex justify-center items-center hover:bg-violet transition duration-300 ease-in-out"
+                class="inline-block w-10 h-10 bg-white rounded-full flex justify-center items-center hover:bg-Indigo transition duration-300 ease-in-out"
                 ><span>
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -291,7 +292,7 @@
           <div
             class="container text-center flex flex-col items-center gap-1.5 mb-10"
           >
-            <span class="uppercase text-gray font-semibold tracking-widest"
+            <span class="uppercase text-Lime font-semibold tracking-widest"
               >Our popular services</span
             >
             <h3 class="text-4xl font-medium max-w-lg">
@@ -381,14 +382,14 @@
               <p>Forget the problems and enjoy every moment at our center!.</p>
               <a
                 href="#services"
-                class="bg-transparent text-white px-5 py-3 rounded-full font-medium border-2 border-white hover:bg-cream transition duration-300 ease-in-out inline-block"
+                class="bg-transparent text-white px-5 py-3 rounded-full font-medium border-2 border-white hover:bg-Fuchsia transition duration-300 ease-in-out inline-block"
                 >Our Services</a
               >
             </div>
 
             <!-- Working hours -->
             <div
-              class="xl:absolute -bottom-10 left-[18%] w-[20rem] h-[20rem] bg-mediumSlateBlue/80 backdrop-blur-xl p-10 flex flex-col justify-center items-start text-white gap-5"
+              class="xl:absolute -bottom-10 left-[18%] w-[20rem] h-[20rem] bg-Lime/80 backdrop-blur-xl p-10 flex flex-col justify-center items-start text-white gap-5"
             >
               <h5 class="text-2xl">Open hours</h5>
               <p>Welcome to the message & SPA! We are happy to help you!</p>
@@ -408,7 +409,7 @@
         <div
           class="container text-center flex flex-col items-center gap-1.5 mb-10"
         >
-          <span class="uppercase text-gray font-semibold tracking-widest"
+          <span class="uppercase text-Lime font-semibold tracking-widest"
             >Service plans</span
           >
           <h3 class="text-4xl font-medium max-w-lg">Special pricing</h3>
@@ -525,7 +526,7 @@
         <div
           class="container text-center flex flex-col items-center gap-1.5 mb-10"
         >
-          <span class="uppercase text-gray font-semibold tracking-widest"
+          <span class="uppercase text-Lime font-semibold tracking-widest"
             >Our shop</span
           >
           <h3 class="text-4xl font-medium max-w-lg">Check our goods</h3>
@@ -615,7 +616,7 @@
         <!-- Button -->
         <div class="mt-10 flex justify-center">
           <button
-            class="h-32 w-32 bg-cream text-white p-5 rounded-full font-medium border-2 border-cream hover:bg-transparent transition duration-300 ease-in-out hover:text-cream"
+            class="h-32 w-32 bg-Fuchsia text-white p-5 rounded-full font-medium border-2 border-Fuchsia hover:bg-transparent transition duration-300 ease-in-out hover:text-Fuchsia"
           >
             View More
           </button>
@@ -693,12 +694,12 @@
       </section>
 
       <!-- News letter -->
-      <section class="py-20 bg-blue-100 h-80">
+      <section class="py-20 bg-blue-100 h-80 relative">
         <!-- Section title -->
         <div
           class="container text-center flex flex-col items-center gap-1.5 mb-10"
         >
-          <span class="uppercase text-gray font-semibold tracking-widest"
+          <span class="uppercase text-Lime font-semibold tracking-widest"
             >Newsletter</span
           >
           <h3 class="text-4xl font-medium max-w-lg">Want to get updates?</h3>
@@ -714,7 +715,7 @@
             <input
               type="email"
               placeholder="Enter Your Email Address"
-              class="w-full px-4 py-3 bg-transparent border-2 border-dashed border-cream rounded-xl outline-none"
+              class="w-full px-4 py-3 bg-transparent border-2 border-dashed border-Fuchsia rounded-xl outline-none"
             />
             <button
               type="submit"
@@ -724,16 +725,16 @@
             </button>
           </div>
         </form>
+        <!-- Leaf -->
+        <div class="absolute w-40 h-40 right-0 bottom-0">
+          <img src="./Assets/images/monstera.png" alt="Monstera" />
+        </div>
       </section>
-      <!-- Leaf -->
-      <div class="w-40 h-40 top-right">
-        <img src="./Assets/images/monstera.png" alt="Monstera" />
-      </div>
     </main>
 
     <!-- Footer-->
 
-    <footer class="py-10" bg-gray>
+    <footer class="py-10" bg-Lime>
       <div class="flex gap-10 mx-8 justify-between">
         <!-- Left side text -->
         <p>
