--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <div class="flex flex-col gap-5 text-center items-center">
             <div class="h-40 w-40 rounded-full overflow-hidden">
               <img
-                src="./assets/images/service-1.jpg"
+                src="./Assets/images/service-1.jpg"
                 alt="Service 1"
                 class="w-full h-full object-cover"
               />
@@ -215,7 +215,7 @@
           <div class="flex flex-col gap-5 text-center items-center">
             <div class="h-40 w-40 rounded-full overflow-hidden">
               <img
-                src="./assets/images/service-2.jpg"
+                src="./Assets/images/service-2.jpg"
                 alt="Service 2"
                 class="w-full h-full object-cover"
               />
@@ -253,7 +253,7 @@
           <div class="flex flex-col gap-5 text-center items-center">
             <div class="h-40 w-40 rounded-full overflow-hidden">
               <img
-                src="./assets/images/service-3.jpg"
+                src="./Assets/images/service-3.jpg"
                 alt="Service 3"
                 class="w-full h-full object-cover"
               />
@@ -310,7 +310,7 @@
             <div class="flex flex-col gap-2.5 items-center text-center">
               <div class="w-20 h-20 overflow-hidden">
                 <img
-                  src="./assets/images/popular-service-1.png"
+                  src="./Assets/images/popular-service-1.png"
                   alt="Popular Service 1"
                   class="w-full h-full object-cover"
                 />
@@ -323,7 +323,7 @@
             <div class="flex flex-col gap-2.5 items-center text-center">
               <div class="w-20 h-20 overflow-hidden">
                 <img
-                  src="./assets/images/popular-service-2.png"
+                  src="./Assets/images/popular-service-2.png"
                   alt="Popular Service 2"
                   class="w-full h-full object-cover"
                 />
@@ -336,7 +336,7 @@
             <div class="flex flex-col gap-2.5 items-center text-center">
               <div class="w-20 h-20 overflow-hidden">
                 <img
-                  src="./assets/images/popular-service-3.png"
+                  src="./Assets/images/popular-service-3.png"
                   alt="Popular Service 3"
                   class="w-full h-full object-cover"
                 />
@@ -349,7 +349,7 @@
             <div class="flex flex-col gap-2.5 items-center text-center">
               <div class="w-20 h-20 overflow-hidden">
                 <img
-                  src="./assets/images/popular-service-4.png"
+                  src="./Assets/images/popular-service-4.png"
                   alt="Popular Service 4"
                   class="w-full h-full object-cover"
                 />
@@ -370,7 +370,7 @@
               class="w-[20rem] h-[20rem] xl:w-[30rem] xl:h-[30rem] overflow-hidden"
             >
               <img
-                src="./assets/images/service-banner.jpg"
+                src="./Assets/images/service-banner.jpg"
                 alt="Service banner"
                 class="w-full h-full object-cover"
               />
@@ -518,7 +518,7 @@
 
         <!-- Leaf -->
         <div class="absolute left-0 bottom-0 w-80 h-80 opacity-10">
-          <img src="./assets/images/monstera.png" alt="Monstera" />
+          <img src="./Assets/images/monstera.png" alt="Monstera" />
         </div>
       </section>
 
@@ -542,7 +542,7 @@
           <div class="w-full flex flex-col gap-5">
             <div class="w-full h-[20rem] overflow-hidden">
               <img
-                src="./assets/images/product-1.jpg"
+                src="./Assets/images/product-1.jpg"
                 alt="Product 1"
                 class="w-full h-full object-cover"
               />
@@ -561,7 +561,7 @@
           <div class="w-full flex flex-col gap-5">
             <div class="w-full h-[20rem] overflow-hidden">
               <img
-                src="./assets/images/product-2.jpg"
+                src="./Assets/images/product-2.jpg"
                 alt="Product 2"
                 class="w-full h-full object-cover"
               />
@@ -580,7 +580,7 @@
           <div class="w-full flex flex-col gap-5">
             <div class="w-full h-[20rem] overflow-hidden">
               <img
-                src="./assets/images/product-3.jpg"
+                src="./Assets/images/product-3.jpg"
                 alt="Product 3"
                 class="w-full h-full object-cover"
               />
@@ -599,7 +599,7 @@
           <div class="w-full flex flex-col gap-5">
             <div class="w-full h-[20rem] overflow-hidden">
               <img
-                src="./assets/images/product-4.jpeg"
+                src="./Assets/images/product-4.jpeg"
                 alt="Product 4"
                 class="w-full h-full object-cover"
               />
@@ -729,7 +729,7 @@
         </form>
         <!-- Leaf -->
         <div class="absolute right-0 bottom-0 w-80 h-80 opacity-10">
-          <img src="./assets/images/monstera.png" alt="Monstera" />
+          <img src="./Assets/images/monstera.png" alt="Monstera" />
         </div>
         </div>
       </section>
@@ -742,7 +742,7 @@
         <!-- Left side text -->
         <p>
           <span class="underline"
-            >Ethereal Beauty Parlor & SPA &copy; 2023 </span
+            >Ethereal Beauty Parlor & SPA &copy; 2024 </span
           >. All rights reserved.
         </p>
 
