Add Missing Pic

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- Favicon -->
     <link
       rel="shortcut icon"
-      href="./assets/icons/favicon.png"
+      href="./Assets/icons/favicon.png"
       type="image/x-icon"
     />
     <title>Ethereal Beauty Spa</title>
@@ -101,7 +101,7 @@
       <!-- Hero section -->
       <section
         class="h-[calc(100vh-5rem)] bg-no-repeat bg-center bg-cover relative"
-        style="background-image: url(./assets/images/hero.jpg)"
+        style="background-image: url(./Assets/images/hero.jpg)"
       >
         <!-- Overlays gradient -->
         <div
