--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
         <!-- Services Banners -->
         <div class="py-20 bg-blue-200">
           <div
-            class="container flex items-center justify-center xl:relative gap-10 flex-wrap"
+            class="container flex items-center justify-center xl: relative gap-10 flex-wrap"
           >
             <!-- Banners -->
             <div
@@ -381,17 +381,17 @@
               class="xl:absolute top-10 right-[18%] w-[20rem] h-[20rem] bg-gradient-to-tl from-rose-500/80 to-pink-500/80 backdrop-blur-xl text-white p-10 flex flex-col gap-5 items-start justify-center"
             >
               <h5 class="text-2xl">Relax now!</h5>
-              <p>Forget the problems and enjoy every moment at our center!.</p>
+              <p>Forget the problems and enjoy every moment at our center!</p>
               <a
                 href="#services"
-                class="bg-transparent text-white px-5 py-3 rounded-full font-medium border-2 border-white hover:bg-Fuchsia transition duration-300 ease-in-out inline-block"
+                class="bg-transparent text-white px-5 py-3 rounded-full font-medium border-2 border-white hover:bg-Fuchsia/60 transition duration-300 ease-in-out inline-block"
                 >Our Services</a
               >
             </div>
 
             <!-- Working hours -->
             <div
-              class="xl:absolute -bottom-10 left-[18%] w-[20rem] h-[20rem] bg-Lime/80 backdrop-blur-xl p-10 flex flex-col justify-center items-start text-white gap-5"
+              class="xl:absolute -bottom-10 left-[18%] w-[20rem] h-[20rem] bg-Lime/60 backdrop-blur-xl p-10 flex flex-col justify-center items-start text-white gap-5"
             >
               <h5 class="text-2xl">Open hours</h5>
               <p>Welcome to the message & SPA! We are happy to help you!</p>
